--- a/part9/calculators/package.json
+++ b/part9/calculators/package.json
@@ -4,6 +4,7 @@
 	"description": "BMI Calculator",
 	"main": "index.js",
 	"scripts": {
+		"start": "ts-node index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"ts-node": "ts-node",
 		"calculateBmi": "ts-node -- bmiCalculator.ts",
@@ -12,7 +13,12 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^4.17.7",
+		"@types/node": "^14.6.0",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.2"
+	},
+	"dependencies": {
+		"express": "^4.17.1"
 	}
 }
