--- a/part9/calculators/package.json
+++ b/part9/calculators/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "ts-node index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "eslint --ext .ts .",
 		"ts-node": "ts-node",
 		"calculateBmi": "ts-node -- bmiCalculator.ts",
 		"calculateExercise": "npm run ts-node -- exerciseCalculator.ts"
@@ -15,6 +16,9 @@
 	"devDependencies": {
 		"@types/express": "^4.17.7",
 		"@types/node": "^14.6.0",
+		"@typescript-eslint/eslint-plugin": "^3.10.0",
+		"@typescript-eslint/parser": "^3.10.0",
+		"eslint": "^7.7.0",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.2"
 	},
