--- a/part9/calculators/package.json
+++ b/part9/calculators/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "ts-node index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "ts-node-dev index.ts",
 		"lint": "eslint --ext .ts .",
 		"ts-node": "ts-node",
 		"calculateBmi": "ts-node -- bmiCalculator.ts",
@@ -20,6 +21,7 @@
 		"@typescript-eslint/parser": "^3.10.0",
 		"eslint": "^7.7.0",
 		"ts-node": "^9.0.0",
+		"ts-node-dev": "^1.0.0-pre.60",
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
