--- a/part9/patientor/backend/package.json
+++ b/part9/patientor/backend/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/cors": "^2.8.7",
 		"@types/express": "^4.17.7",
 		"@typescript-eslint/eslint-plugin": "^3.10.1",
 		"@typescript-eslint/parser": "^3.10.1",
@@ -22,6 +23,7 @@
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.17.1"
 	}
 }
